--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "aflam.club",
+  "name": "Atfrg.Online",
   "version": "1.0.0",
-  "description": "Aflam.Club Project",
+  "description": "Atfrg.Online Project",
   "author": "Adham Mahmoud",
   "private": true,
   "scripts": {
