--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Atfrg.Online",
+  "name": "aflam-club",
   "version": "1.0.0",
   "description": "Atfrg.Online Project",
   "author": "Adham Mahmoud",
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/apollo": "^4.0.0-rc8.1",
+    "@nuxtjs/proxy": "^1.3.3",
     "@trevoreyre/autocomplete-vue": "^2.0.2",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
