--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@trevoreyre/autocomplete-vue": "^2.0.2",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "cors": "^2.8.5",
     "fs": "0.0.1-security",
     "graphql-tag": "^2.10.1",
     "hooper": "^0.3.2",
