--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aflam-club",
   "version": "1.0.0",
-  "description": "Atfrg.Online Project",
+  "description": "مشاهدة ومتحميل مباشر افلام و مسلسلات وانمي بجودة عالية مترجمة - اتفرج اون لاين - بدون اعلانات",
   "author": "Adham Mahmoud",
   "private": true,
   "scripts": {
@@ -14,6 +14,7 @@
     "@nuxtjs/apollo": "^4.0.0-rc8.1",
     "@nuxtjs/proxy": "^1.3.3",
     "@trevoreyre/autocomplete-vue": "^2.0.2",
+    "@youon/videojs-sprite-thumbnails": "^1.0.2",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
     "cors": "^2.8.5",
@@ -27,16 +28,21 @@
     "plyr": "^3.5.6",
     "sass-loader": "^7.1.0",
     "vanilla-lazyload": "^12.3.0",
+    "videojs-contrib-quality-levels": "^2.0.9",
+    "videojs-http-source-selector": "^1.1.6",
+    "videojs-seek-buttons": "^1.5.0",
     "vue-awesome-swiper": "^3.1.3",
     "vue-clipboard2": "^0.3.0",
     "vue-clipboards": "^1.3.0",
     "vue-lazyload": "^1.3.3",
     "vue-owl-carousel": "^2.0.3",
     "vue-plyr": "^5.1.3",
+    "vue-video-player": "^5.0.2",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
+    "video.js": "^7.7.5",
     "webpack": "^4.38.0"
   }
 }
