--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aflam-club",
   "version": "1.0.0",
-  "description": "مشاهدة ومتحميل مباشر افلام و مسلسلات وانمي بجودة عالية مترجمة - اتفرج اون لاين - بدون اعلانات",
+  "description": "مشاهدة وتحميل مباشر افلام و مسلسلات وانمي بجودة عالية مترجمة - اتفرج اون لاين - بدون اعلانات",
   "author": "Adham Mahmoud",
   "private": true,
   "scripts": {
