--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxtjs/apollo": "^4.0.0-rc8.1",
     "@nuxtjs/proxy": "^1.3.3",
+    "@nuxtjs/sitemap": "^2.2.0",
     "@trevoreyre/autocomplete-vue": "^2.0.2",
     "@youon/videojs-sprite-thumbnails": "^1.0.2",
     "bootstrap": "^4.1.3",
