--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "nuxt-ssr-cache": "^1.5.1",
     "plyr": "^3.5.6",
     "sass-loader": "^7.1.0",
+    "srt-webvtt": "^1.0.1",
+    "subtitle": "^2.0.3",
     "vanilla-lazyload": "^12.3.0",
     "videojs-contrib-quality-levels": "^2.0.9",
     "videojs-http-source-selector": "^1.1.6",
