--- a/package.json
+++ b/package.json
@@ -25,15 +25,19 @@
     "fs": "0.0.1-security",
     "graphql-tag": "^2.10.3",
     "hooper": "^0.3.4",
+    "intersection-observer": "^0.10.0",
     "jquery": "^3.5.0",
     "node-sass": "^4.13.1",
     "nuxt": "^2.12.2",
+    "nuxt-polyfill": "^1.0.3",
     "nuxt-ssr-cache": "^1.5.1",
     "plyr": "^3.5.10",
     "sass-loader": "^7.3.1",
+    "smoothscroll-polyfill": "^0.4.4",
     "srt-webvtt": "^1.0.1",
     "subtitle": "^2.0.3",
     "ts-node": "^8.9.0",
+    "url-polyfill": "^1.1.8",
     "vanilla-lazyload": "^12.5.1",
     "videojs-contrib-quality-levels": "^2.0.9",
     "videojs-http-source-selector": "^1.1.6",
