--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
     "apollo-link-http": "^1.5.17",
+    "apollo-server-express": "^2.12.0",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.12.0",
     "cors": "^2.8.5",
