--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "apollo-boost": "^0.4.7",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
+    "apollo-link": "^1.2.14",
     "apollo-link-http": "^1.5.17",
     "apollo-server-express": "^2.12.0",
     "bootstrap": "^4.4.1",
@@ -47,6 +48,7 @@
     "videojs-contrib-quality-levels": "^2.0.9",
     "videojs-http-source-selector": "^1.1.6",
     "videojs-seek-buttons": "^1.5.0",
+    "vue-apollo": "^3.0.3",
     "vue-awesome-swiper": "^3.1.3",
     "vue-clipboard2": "^0.3.1",
     "vue-clipboards": "^1.3.0",
