--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxtjs/apollo": "^4.0.0-rc9",
     "@nuxtjs/proxy": "^1.3.3",
+    "@nuxtjs/pwa": "^3.0.0-beta.20",
     "@nuxtjs/sitemap": "^2.2.0",
     "@trevoreyre/autocomplete-vue": "^2.1.1",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
