--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aflam-club",
+  "name": "atfrg-online",
   "version": "1.0.0",
   "description": "مشاهدة وتحميل مباشر افلام و مسلسلات وانمي بجودة عالية مترجمة - اتفرج اون لاين - بدون اعلانات",
   "author": "Adham Mahmoud",
