--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/apollo": "^4.0.0-rc9",
+    "@nuxtjs/onesignal": "^3.0.0-beta.16",
     "@nuxtjs/proxy": "^1.3.3",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
     "@nuxtjs/sitemap": "^2.2.0",
@@ -33,6 +34,7 @@
     "graphql-tag": "^2.10.3",
     "hooper": "^0.3.4",
     "intersection-observer": "^0.10.0",
+    "isomorphic-unfetch": "^3.0.0",
     "jquery": "^3.5.0",
     "node-sass": "^4.13.1",
     "nuxt": "^2.12.2",
