--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "nuxt-ssr-cache": "^1.5.1",
     "nuxt-start": "^2.12.2",
     "plyr": "^3.5.10",
+    "plyr-ads": "^1.1.5",
     "sass-loader": "^7.3.1",
     "smoothscroll-polyfill": "^0.4.4",
     "srt-webvtt": "^1.0.1",
