--- a/package.json
+++ b/package.json
@@ -60,6 +60,10 @@
     "vuex": "^3.2.0",
     "webpack-external-import": "^2.2.3"
   },
+  "engines": {
+    "node": ">= 10",
+    "npm": ">= 6.1.0"
+  },
   "devDependencies": {
     "nodemon": "^2.0.3",
     "webpack": "^4.43.0"
