--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@trevoreyre/autocomplete-vue": "^2.1.1",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@vue/cli-shared-utils": "^4.3.1",
+    "@youon/videojs-sprite-thumbnails": "^1.0.2",
     "apollo-boost": "^0.4.7",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
@@ -49,6 +50,9 @@
     "ts-node": "^8.9.0",
     "url-polyfill": "^1.1.8",
     "vanilla-lazyload": "^12.5.1",
+    "videojs-contrib-quality-levels": "^2.0.9",
+    "videojs-http-source-selector": "^1.1.6",
+    "videojs-seek-buttons": "^1.5.0",
     "vue-apollo": "^3.0.3",
     "vue-awesome-swiper": "^3.1.3",
     "vue-clipboard2": "^0.3.1",
@@ -60,12 +64,9 @@
     "vuex": "^3.2.0",
     "webpack-external-import": "^2.2.3"
   },
-  "engines": {
-    "node": ">= 10",
-    "npm": ">= 6.1.0"
-  },
   "devDependencies": {
     "nodemon": "^2.0.3",
+    "video.js": "^7.7.5",
     "webpack": "^4.43.0"
   }
 }
